--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -18,7 +18,9 @@
     ]
   },
   "angularCompilerOptions": {
-    "enableI18nLegacyMessageIdFormat": false
+    "enableI18nLegacyMessageIdFormat": false,
+    "strictTemplates":true,
+    "strictDomEventTypes":false,
   },
   "plugins": [
     {"name": "@angular/language-service"}
