--- a/client/angular.json
+++ b/client/angular.json
@@ -34,7 +34,8 @@
               "src/styles.scss",
               "./node_modules/bootstrap/dist/css/bootstrap.min.css",
               "./node_modules/ngx-bootstrap/datepicker/bs-datepicker.css",
-              "./node_modules/@fortawesome/fontawesome-free/css/all.css"
+              "./node_modules/@fortawesome/fontawesome-free/css/all.css",
+              "./node_modules/ngx-toastr/toastr.css"
             ],
             "scripts": []
           },
