--- a/client/package.json
+++ b/client/package.json
@@ -20,10 +20,13 @@
     "@angular/router": "~12.2.0",
     "@fortawesome/fontawesome-free": "^6.2.0",
     "bootstrap": "^5.0.2",
+    "bootswatch": "^5.2.2",
     "ngx-bootstrap": "^7.1.2",
+    "ngx-spinner": "^12.0.0",
     "ngx-toastr": "^14.3.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
+    "xng-breadcrumb": "^6.6.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
