--- a/Infrastructure/Infrastructure.csproj
+++ b/Infrastructure/Infrastructure.csproj
@@ -5,8 +5,15 @@
   </ItemGroup>
 
   <ItemGroup>
+  <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
+  <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.17">
+    <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    <PrivateAssets>all</PrivateAssets>
+  </PackageReference>
   <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="5.0.17" />
+  <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.24.0" />
   <PackageReference Include="StackExchange.Redis" Version="2.6.70" />
+  <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.24.0" />
   </ItemGroup>
 
   <PropertyGroup>
